--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "browserlist":[
+  "browserlist": [
     "last 10 Chrome version",
     "last 10 Firefox version"
   ]
